--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <table id="bio">
       <tr>
         <th>Season</th>
+        <th>Team</th>
         <th>Age</th> 
         <th>GP</th>
         <th>Min</th>
